--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
     href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
 
-  <title>Sortom</title>
+  <title>BestMovie</title>
 </head>
 
 <body className="hold-transition sidebar-mini layout-fixed p-0 m-0">
